Debugging, added some dev tools, game end functionality

--- a/gameScreen.html
+++ b/gameScreen.html
@@ -37,6 +37,8 @@
             <button onclick="" id="display_cards_button">Display Cards</button>
             <button onclick="doRound()" id="start_round_button">Start Round</button>
             <button onclick="playCard()" id="play_card_button">Play Card</button>
+            <button onclick="prepareDeal(playerDeck, activePlayers)" id="prepare_round_button">Prepare Next Round</button>
+            <button onclick="breakTie(winners, playerDeck)" id="break_tie_button">Break Tie</button>
         </div>
 
         <!-- Center Piles -->
