--- a/rules.html
+++ b/rules.html
@@ -12,26 +12,26 @@
 <body>
     <button onclick="window.location.href='index.html'">Go Home</button>
     <h1>Twochre Rules</h1>
-    <h2>Rule 1</h2>
+    <h2>Rule 1: Preamble</h2>
     <p>Twochre Rules!</p>
-    <h2>Rule 2</h2>
+    <h2>Rule 2: Player Count</h2>
     <p>Twochre requires five (5) players to play.</p>
-    <h2>Rule 3</h2>
+    <h2>Rule 3: Decks</h2>
     <p>Twochre is played using a standard 52-card French-suited deck. The deck is to be divided into two groups, one containing the ace, nine, ten, joker, queen, and king of each suit, as well as the two of hearts (which is called the “Tooker”). This pile is called the player deck. The remaining cards (twos [minus the tooker], threes, fives, sevens, eights) are called the trump deck. The trump deck is to be placed face-down near the center of the playing area.</p>
-    <h2>Rule 4</h2>
+    <h2>Rule 4: Role Selection</h2>
     <p>At the beginning of the game, each player receives one card from the player deck. If a player has received the tooker, they are now the “cat herder” and the player to their left is the “dealer”. If no players have received the tooker, they discard their cards and the process repeats until a cat herder and dealer have been selected.</p>
-    <h2>Rule 5</h2>
+    <h2>Rule 5: Dealing</h2>
     <p>The role of the dealer is to shuffle the player deck and pass out the cards to the other players. The dealer must give out a total of five cards to each player who is not the cat herder (including themselves). The cards must be chosen randomly and must remain face-down on the playing surface in front of the players. Cards can be dealt in an alternating 3-card, 2-card pattern; or in a 1-card, 4-card pattern; or in any combination of the above which results in all players who are not the cat herder having five (5) cards in front of them. The five cards which the dealer still holds is called the “kitty” and should be given to the cat herder (face-down as in regular dealing).</p>
-    <h2>Rule 6</h2>
+    <h2>Rule 6: Strat Cards</h2>
     <p>After being dealt all five of their cards, each player (including the cat herder) picks a random card to know the value of. This card must be placed back face-down on the playing surface so that no other player can see it, but it can be looked at by the player who holds it at any time. This card is called the “strat”. All other cards must remain face-down on the table so that their values are unknown to all players. If a player accidentally looks at more than one card, they must immediately exchange their four non-strat cards with whomever is sitting two places to their left.</p>
-    <h2>Rule 7</h2>
+    <h2>Rule 7: Cat Actions</h2>
     <p>The cat herder has three options after being dealt: they can choose to take another strat card (called a “cat lasso”) which stays face up on the table so that all other players can see it; or they can also choose to exchange their strat card with another player (called a “cat burgle”), in which case the player from whom the strat has been taken must use their new card as their strat (and can look at the card); or they can not do either (or forget to), which is called a “cat nap”. </p>
-    <h2>Rule 8</h2>
+    <h2>Rule 8: Trump Suit</h2>
     <p>At the beginning of a round, one card is flipped up from the trump deck, and the suit of that card is called the “trump suit” (or “trump”). This card must remain visible to all players throughout a round. If it is a joker, the cat herder chooses a trump suit after looking at his Strat cards but before taking a cat action. If the same trump is flipped twice in a row over two rounds, the dealer will become the cat herder before cards are dealt for the next round.</p>
-    <h2>Rule 9</h2>
+    <h2>Rule 9: Stratopshere Rounds</h2>
     <p>The first player to act once a round has started is the player to the direct left of the dealer. They must put one card from their hand in the center of the playing surface, face-up and visible to all players. They can choose to play their strat card, in which case they must say “stratosphere” so that all other players can hear. In a stratosphere round, all players must play their strat card (including the cat herder, who can choose between their strat cards if they have cat lasso’d). If the leading player does not win the trick during a stratosphere round, they immediately lose one point.
     </p>
-    <h2>Rule 10</h2>
+    <h2>Rule 10: Tricks</h2>
     <p>Each possible win during a round is called a “trick”. After the first trick, the player who won the previous trick becomes the new leader and must put their card face-up in the center of the playing surface first. This proceeds until all players have used all of their cards (five tricks per round), at which point the round ends and the cards must be reshuffled and re-dealt by the player to the left of the previous round’s dealer, who is the new dealer. Play continues until a player has won by earning exactly four (4) points.
     </p>
     <h2>Rule 11</h2>
