--- a/rules.html
+++ b/rules.html
@@ -17,43 +17,43 @@
     <h2>Rule 2: Player Count</h2>
     <p>Twochre requires five (5) players to play.</p>
     <h2>Rule 3: Decks</h2>
-    <p>Twochre is played using a standard 52-card French-suited deck. The deck is to be divided into two groups, one containing the ace, nine, ten, joker, queen, and king of each suit, as well as the two of hearts (which is called the “Tooker”). This pile is called the player deck. The remaining cards (twos [minus the tooker], threes, fives, sevens, eights) are called the trump deck. The trump deck is to be placed face-down near the center of the playing area.</p>
+    <p>Divide a standard 52-card deck into two groups: the Player Deck containing the ace, nine, ten, joker, queen, and king of each suit, as well as the two of hearts (which is called the “Tooker”); and the Trump Deck containing twos (minus the tooker), threes, fives, sevens, eights.</p>
     <h2>Rule 4: Role Selection</h2>
-    <p>At the beginning of the game, each player receives one card from the player deck. If a player has received the tooker, they are now the “cat herder” and the player to their left is the “dealer”. If no players have received the tooker, they discard their cards and the process repeats until a cat herder and dealer have been selected.</p>
+    <p>Deal out the Player Deck one card at a time, one card to each player. When a player recieves the Tooker, they take the role of “Cat Herder” and the player to their left is the “Dealer”. Continue dealing until roles are chosen.</p>
     <h2>Rule 5: Dealing</h2>
-    <p>The role of the dealer is to shuffle the player deck and pass out the cards to the other players. The dealer must give out a total of five cards to each player who is not the cat herder (including themselves). The cards must be chosen randomly and must remain face-down on the playing surface in front of the players. Cards can be dealt in an alternating 3-card, 2-card pattern; or in a 1-card, 4-card pattern; or in any combination of the above which results in all players who are not the cat herder having five (5) cards in front of them. The five cards which the dealer still holds is called the “kitty” and should be given to the cat herder (face-down as in regular dealing).</p>
+    <p>To start a round, the Dealer shuffles the Player Deck and then deals five (5) cards to each player who is not the Cat Herder (including themselves). The cards must remain face-down on the playing surface in front of the players. In the end, the five (5) cards which the dealer still holds is called the “Kitty” and should be given to the cat herder face-down.</p>
     <h2>Rule 6: Strat Cards</h2>
-    <p>After being dealt all five of their cards, each player (including the cat herder) picks a random card to know the value of. This card must be placed back face-down on the playing surface so that no other player can see it, but it can be looked at by the player who holds it at any time. This card is called the “strat”. All other cards must remain face-down on the table so that their values are unknown to all players. If a player accidentally looks at more than one card, they must immediately exchange their four non-strat cards with whomever is sitting two places to their left.</p>
+    <p>After being dealt all five of their cards, each player (including the cat herder) picks a random card called the "Strat" which they are allowed to look at. Players may look at their own Strat card at any time but should keep the value of their Strat card secret. All other cards must always remain face-down on the table so that their values are unknown to all players, including their holder.</p>
     <h2>Rule 7: Cat Actions</h2>
-    <p>The cat herder has three options after being dealt: they can choose to take another strat card (called a “cat lasso”) which stays face up on the table so that all other players can see it; or they can also choose to exchange their strat card with another player (called a “cat burgle”), in which case the player from whom the strat has been taken must use their new card as their strat (and can look at the card); or they can not do either (or forget to), which is called a “cat nap”. </p>
+    <p>After recieving their cards and selecting a Strat Card, the Cat Herder takes one of three actions: they can choose to take another strat card (called a “cat lasso”) which stays face up on the table so that all other players can see it; or they can also choose to exchange their strat card with another player (called a “cat burgle”), in which case the player from whom the strat has been taken must use their new card as their strat (and can look at the card); or they can not do either (or forget to), which is called a “cat nap”, in which case the player to the right of the Cat Herder will be the first to play a card during the round. </p>
     <h2>Rule 8: Trump Suit</h2>
     <p>At the beginning of a round, one card is flipped up from the trump deck, and the suit of that card is called the “trump suit” (or “trump”). This card must remain visible to all players throughout a round. If it is a joker, the cat herder chooses a trump suit after looking at his Strat cards but before taking a cat action. If the same trump is flipped twice in a row over two rounds, the dealer will become the cat herder before cards are dealt for the next round.</p>
     <h2>Rule 9: Stratopshere Rounds</h2>
     <p>The first player to act once a round has started is the player to the direct left of the dealer. They must put one card from their hand in the center of the playing surface, face-up and visible to all players. They can choose to play their strat card, in which case they must say “stratosphere” so that all other players can hear. In a stratosphere round, all players must play their strat card (including the cat herder, who can choose between their strat cards if they have cat lasso’d). If the leading player does not win the trick during a stratosphere round, they immediately lose one point.
     </p>
     <h2>Rule 10: Tricks</h2>
-    <p>Each possible win during a round is called a “trick”. After the first trick, the player who won the previous trick becomes the new leader and must put their card face-up in the center of the playing surface first. This proceeds until all players have used all of their cards (five tricks per round), at which point the round ends and the cards must be reshuffled and re-dealt by the player to the left of the previous round’s dealer, who is the new dealer. Play continues until a player has won by earning exactly four (4) points.
+    <p>Each possible win during a round is called a “trick”. After the first trick, the player who won the previous trick becomes the new Leader and must put their card face-up in the center of the playing surface first. This proceeds until all players have used all of their cards (five tricks per round), at which point the round ends and the cards must be reshuffled and re-dealt by the player to the left of the previous round’s dealer, who is the new dealer. Play continues until a player has won by earning exactly four (4) points.
     </p>
-    <h2>Rule 11</h2>
-    <p>Points are tracked using a player's score card. At the beginning of the game, all of the symbols on the card should be covered using the most random object a player can locate in the room. As a player earns points, they must move the object so as to reveal the number of symbols on their score card equaling their number of points. Points are floored at zero (0) (meaning a player cannot have a negative score) and are capped at four (4). Getting exactly four (4) points is the win condition of twochre. Earning more than four (4) points is called a “bust” and immediately resets a player’s score to one (1) point.
+    <h2>Rule 11: Score Tracking</h2>
+    <p>All players start with zero (0) points. To win the game, a player needs exactly four (4) points. Earning more than four (4) points causes the player to "bust" and miss the winning value. For example, if a player has 3 points and earns 2, they will not win the game and will instead have 1 point.
     </p>
-    <h2>Rule 12</h2>
-    <p>Points are acquired at the end of the round as follows: Winning two (2) tricks is worth one (1) point; winning four (4) tricks is worth two (2) points. Winning five (5) tricks is worth one half (½). If every player wins one (1) trick, everyone loses one (1) point.
+    <h2>Rule 12: Scoring Points</h2>
+    <p>Points are acquired at the end of the round as follows: Winning two (2) tricks is worth one (1) point; winning four (4) tricks is worth two (2) points. Winning five (5) tricks is worth one half point (½). If every player wins one (1) trick, everyone loses one (1) point.
     </p>
-    <h2>Rule 13</h2>
-    <p>Winning a trick is determined as follows: if a player's card is the highest played card of the trump suit (the suit of the card flipped up from the trump deck), or is the highest played card of the suit of the card played by the leader, that player wins that trick. In all suits but the trump, the regular value of the card is the value of the card (with aces being high). In the trump suit, the jack of that suit is the highest card, and the jack of the opposite suit of the same color is the second highest card (this jack is implied to be of the trump suit in all cases).
+    <h2>Rule 13: Winning a Trick</h2>
+    <p>To win a trick, a player's card must be either the highest value played card of the Round Trump or of the Trick Trump. In all suits but the trump, the regular value of the card is the value of the card (with aces being high). In the trump suit, the jack of that suit is the highest card, and the jack of the other suit of the same color is the second highest card.
     </p>
-    <h2>Rule 14</h2>
+    <h2>Rule 14: Tooker Scoring</h2>
     <p>Winning a trick having played the tooker will immediately give that player one (1) point, or one and a half (1½) points if they have a non-whole point value, or one half (½) point if they have a non-whole point value and earning another point would cause them to bust.
     </p>
-    <h2>Rule 15</h2>
+    <h2>Rule 15: Rule Limits</h2>
     <p>There can only be twenty-two (22) rules in this ruleset. No rules can be added that would exceed 22 rules when made concise (in other words, keep it the same complexity as euchre).
     </p>
-    <h2>Rule 16</h2>
+    <h2>Rule 16: Style and Font</h2>
     <p>All digital literature associated with this game (i.e. this ruleset) must be written in the Comic Sans MS font because people with dyslexia find it easier to read (and Tooker is for everyone).
     </p>
-    <h2>Rule 17</h2>
-    <p>If two players acquire 4 points at the same time (they both win two tricks in the same round while having three points), both players will return to two points.</p>
+    <h2>Rule 17: Breaking a Tie</h2>
+    <p>If two or more players acquire 4 points at the same time, those players will all return to two points.</p>
     <h2>Rule 18</h2>
     <p></p>
     <h2>Rule 19</h2>
